gcc/testsuite/rust/compile/issue-3592.rs
pub trait X {
    fn x() {
        fn f(&mut self) {}
        // { dg-error ".self. parameter is only allowed in associated functions" "" { target *-*-* } .-1 }
        f();
    }
}
